@@ -18,6 +18,7 @@ Version 0.3u
 * Restructured the end of combat so the Defeat/Win screen with exp and loot always shows up first. Report if there are fights that don't behave this way (or are suddenly acting odd).
 * Restructured how capacity and stretch works. Still pending some balance. The values have been set on a different scale, and scenes lockouts should now only be based on cock thickness (not length). There may still be some weirdness. Saves have been tweaked for player, kiakai and rosalin.
 * Added mastery skills for all the implemented jobs. These are only unlocked after you reach master level.
+* Added an HP/SP/Lust bonus when mastering some jobs. If you have already mastered the jobs; sorry, you won't be able to get this.
 * Bandits on the kings road are a bit tougher now, sometimes.
 * Added new scenes for Cveta by The Observer:
  - Teach (jobs not 100% implemented yet)
